condformat 0.6.0
----------------------------------------------------------------

* Fix tibble formatting issues, causing package malfunction.
* Bugfix: theme_htmlTable() now accepts the css.cell argument (thanks
  to 鱼飞灰 for reporting it)



condformat 0.5.0
----------------------------------------------------------------

* Shiny support: Add condformatOutput and renderCondformat. Closes #3.
  - Use pagination in shiny if recent enough htmlTable package is installed.
* PDF support: Fix extra NULL when printing. Closes #4.
* Demote xlsx (and rJava) to Suggests.
* Fix standard evaluation functions, they now use formulas. See the examples (Reported in #5).
* Fix Excel export (fixed in 80440ecfd16fb74e3e0aa4c6ebc623ad2ae74b15, reported in #7)

condformat 0.4.0
----------------------------------------------------------------

* Excel export support with condformat2excel

condformat 0.3.0
----------------------------------------------------------------

* PDF support: Export table to LaTeX using knitr.
* Fix examples for full compatibility with dplyr 0.5.0

condformat 0.2.0
----------------------------------------------------------------

* First CRAN submission
* Add theme_htmlTable to pass custom formatting options to htmlTable.
* Improve knitr compatibility


condformat 0.1.1
----------------------------------------------------------------

* Change to a ggplot-like syntax
