@@ -9,6 +9,7 @@ export(condformat2html)
 export(condformat2latex)
 export(condformat2widget)
 export(condformatOutput)
+export(condformat_example)
 export(renderCondformat)
 export(rule_fill_discrete)
 export(rule_fill_discrete_)
