@@ -4,7 +4,7 @@
 \alias{print.condformat_tbl}
 \title{Prints the data frame in an html page and shows it.}
 \usage{
-\method{print}{condformat_tbl}(x, ...)
+\method{print}{condformat_tbl}(x, ..., paginate = TRUE)
 }
 \arguments{
 \item{x}{A condformat_tbl object}
@@ -21,4 +21,3 @@ Prints the data frame in an html page and shows it.
 data(iris)
 print(condformat(iris[1:5,]))
 }
-
