@@ -4,6 +4,7 @@ condformat 0.6.0
 * Fix tibble formatting issues, causing package malfunction.
 * Bugfix: theme_htmlTable() now accepts the css.cell argument (thanks
   to 鱼飞灰 for reporting it)
+* Require latest htmlTable. Improve/fix printing of condformat
 
 
 
